* Deprecated `ProcessStandardSuite` and the `ProcessComputerSuite` in favor of Gherkin testing and the `ProcessEmbeddedStandardSuite` and `ProcessEmbeddedComputerSuite` for testing JVM-specific Gremlin behaviors.
* Removed lambda oriented Gremlin testing from Gherkin test suite.
* Increase minimum Java version from 1.8 to 11 for building and running.
* Moved all lambda oriented Gremlin tests to `LambdaStepTest` in the Java test suite.
* Removed the `@RemoteOnly` testing tag in Gherkin as lambda tests have all been moved to the Java test suite.
* Updated gremlin-javascript to use GraphBinary as default instead of GraphSONv3
* Renamed many types in the grammar for consistent use of terms "Literal", "Argument", and "Varargs"
* Changed `gremlin-net` so that System.Text.Json is only listed as an explicit dependency when it is not available from the framework.

== TinkerPop 3.7.0 (Gremfir Master of the Pan Flute)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlin-zamfir.png[width=185]

[[release-3-7-5]]
=== TinkerPop 3.7.5 (Release Date: NOT OFFICIALLY RELEASED YET)

[[release-3-7-4]]
=== TinkerPop 3.7.4 (Release Date: August 1, 2025)

* Fixed bug in server `Settings` where it was referencing a property that was back in 3.3.0 and generating a warning log.
* Improved performance of `Traversal.lock()` which was being called excessively.
* Added log entry in `WsAndHttpChannelizerHandler` to catch general errors that escape the handlers.
* Improved invalid plugin error message in Gremlin Console.
* Added a `MessageSizeEstimator` implementation to cover `Frame` allowing Gremlin Server to better estimate message sizes for the direct buffer.
* Fixed bug in Gremlin Console for field accessor issue with JDK17.
* Improved logging around triggers of the `writeBufferHighWaterMark` so that they occur more than once but do not excessively fill the logs.